src/partial/components/popup-chat-users/popup-chat-users.scss
@import '/src/utils/variables';

.popup-chat-users {
	display: none;
	position: absolute;
	top: 70px;
	right: 50%;
	padding: 15px;
	border-radius: $border-radius;
	width: 300px;
	background-color: $white-color;
	border: 1px solid $dark-gray-color;

	&__title {
		text-align: center;
		margin-bottom: 20px;
	}

	&__actions {
		display: flex;
		align-items: center;
		justify-content: space-between;
	}
}

.users-list {
	height: 300px;
	overflow-y: auto;
	margin: 10px 0;

	&__item {
		display: flex;
		align-items: center;
		margin-bottom: 10px;
		gap: 10px;

		&:last-child {
			margin-bottom: 0;
		}
	}
}

.users-list-item {
	&__name {
		flex-grow: 1;
	}
}

